# vpn-aio-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  README_BUILD.md  build.bat  build.rs  build.sh  install.bat  run.bat
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
assets/fonts/: placeholder.txt
src/: main.rs
src/config/: mod.rs
src/network/: mod.rs  monitor.rs  rdp.rs  vpn.rs  wireguard.rs  wol.rs
src/system/: installer.rs  mod.rs  updater.rs
src/ui/: components.rs  mod.rs  theme.rs
src/ui/panels/: home.rs  mod.rs  rdp.rs  remote.rs  settings.rs  vpn.rs  wol.rs
