[package]
name = "vpn-manager"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "vpn-manager"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
wake-on-lan = "0.2"
network-interface = "1.0"
ping = "0.5"
dirs = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
semver = "1.0"
regex = "1.0"
which = "6.0"
sudo = "0.6"
rfd = "0.15"
sysinfo = "0.30"
image = "0.24"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_NetworkManagement_IpHelper"] }

[target.'cfg(unix)'.dependencies]
nix = "0.29"

[build-dependencies]
winres = "0.1"
